--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* 🌸 Fondo lindo */
 body {
-    background-image: url('TU-IMAGEN.jpg');
+    background-image: url('sebaflor.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
